@@ -2,6 +2,11 @@
 # Copyright 2004 Martin Mittelsdorf; Distributed under the GPL
 # $Header:
 
+*motion-3.1.16
+  26 Jul 2004; Martin Mittelsdorf <martini at vdr-portal.de>
+  version bump
+  removed sql file_type patch (is included in 3.1.16)
+  
 *motion-3.1.15
   20 Jul 2004; Martin Mittelsdorf <martini at vdr-portal.de>
   Added patch to fix wrong file_type for snapshots with mysql-support
